// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async CommonSelect with initial and no options messages 1`] = `
<div>
  <div
    class="common-select__root"
    data-testid="common-select"
  >
    <div
      class="MuiFormControl-root"
    >
      <div
        class="MuiInputBase-root MuiInput-root common-select__input-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      >
        <div
          class="common-select__container"
        >
          <div
            class="css-10nd86i MuiInputBase-input MuiInput-input"
            id=""
          >
            <div
              class="css-vj8t7z common-select__control common-select__control--menu-is-open"
            >
              <div
                class="css-1hwfws3 common-select__value-container"
              >
                <div
                  class="css-1g6gooi"
                >
                  <div
                    class="common-select__input"
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="select-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value="test"
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    >
                      test
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-1wy0on6 common-select__indicators"
              >
                <div
                  class="common-select__dropdown-arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 14l5-5 5 5z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="css-15k3avv common-select__menu"
            >
              <div
                class="css-11unzgr common-select__menu-list"
              >
                <li
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
                  data-testid="no-options-message"
                  role="menuitem"
                  tabindex="-1"
                >
                  No results found
                  <span
                    class="MuiTouchRipple-root"
                  />
                </li>
              </div>
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`render and test CommonSelect 1`] = `
<div>
  <div
    class="common-select__root"
    data-testid="common-select"
  >
    <div
      class="MuiFormControl-root"
    >
      <div
        class="MuiInputBase-root MuiInput-root common-select__input-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      >
        <div
          class="common-select__container"
        >
          <div
            class="css-10nd86i MuiInputBase-input MuiInput-input"
            id="test"
          >
            <div
              class="css-vj8t7z common-select__control common-select__control--menu-is-open"
            >
              <div
                class="css-1hwfws3 common-select__value-container"
              >
                <div
                  class="css-1492t68 common-select__placeholder"
                />
                <div
                  class="css-1g6gooi"
                >
                  <div
                    class="common-select__input"
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="test-select-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="css-1wy0on6 common-select__indicators"
              >
                <div
                  class="common-select__dropdown-arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 14l5-5 5 5z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="css-15k3avv common-select__menu"
            >
              <div
                class="css-11unzgr common-select__menu-list"
              >
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="AFGHANISTAN"
                  id="AFGHANISTAN"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Afghanistan
                    </div>
                    <div>
                      AFGHANISTAN
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="ALAND_ISLANDS"
                  id="ALAND_ISLANDS"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Aland Islands
                    </div>
                    <div>
                      ALAND_ISLANDS
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="ALBANIA"
                  id="ALBANIA"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Albania
                    </div>
                    <div>
                      ALBANIA
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="ALGERIA"
                  id="ALGERIA"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Algeria
                    </div>
                    <div>
                      ALGERIA
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="AMERICAN_SAMOA"
                  id="AMERICAN_SAMOA"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      American Samoa
                    </div>
                    <div>
                      AMERICAN_SAMOA
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="ANDORRA"
                  id="ANDORRA"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Andorra
                    </div>
                    <div>
                      ANDORRA
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="ANGOLA"
                  id="ANGOLA"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Angola
                    </div>
                    <div>
                      ANGOLA
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="ANGUILLA"
                  id="ANGUILLA"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Anguilla
                    </div>
                    <div>
                      ANGUILLA
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="ANTARCTICA"
                  id="ANTARCTICA"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Antarctica
                    </div>
                    <div>
                      ANTARCTICA
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="ARGENTINA"
                  id="ARGENTINA"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Argentina
                    </div>
                    <div>
                      ARGENTINA
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="ARMENIA"
                  id="ARMENIA"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Armenia
                    </div>
                    <div>
                      ARMENIA
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="ARUBA"
                  id="ARUBA"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Aruba
                    </div>
                    <div>
                      ARUBA
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="AUSTRALIA"
                  id="AUSTRALIA"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Australia
                    </div>
                    <div>
                      AUSTRALIA
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="AUSTRIA"
                  id="AUSTRIA"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Austria
                    </div>
                    <div>
                      AUSTRIA
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="AZERBAIJAN"
                  id="AZERBAIJAN"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Azerbaijan
                    </div>
                    <div>
                      AZERBAIJAN
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="BAHAMAS"
                  id="BAHAMAS"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Bahamas
                    </div>
                    <div>
                      BAHAMAS
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="BAHRAIN"
                  id="BAHRAIN"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Bahrain
                    </div>
                    <div>
                      BAHRAIN
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="BANGLADESH"
                  id="BANGLADESH"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Bangladesh
                    </div>
                    <div>
                      BANGLADESH
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="BARBADOS"
                  id="BARBADOS"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Barbados
                    </div>
                    <div>
                      BARBADOS
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="BELARUS"
                  id="BELARUS"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Belarus
                    </div>
                    <div>
                      BELARUS
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="BELGIUM"
                  id="BELGIUM"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Belgium
                    </div>
                    <div>
                      BELGIUM
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="BELIZE"
                  id="BELIZE"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Belize
                    </div>
                    <div>
                      BELIZE
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="BENIN"
                  id="BENIN"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Benin
                    </div>
                    <div>
                      BENIN
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="BERMUDA"
                  id="BERMUDA"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Bermuda
                    </div>
                    <div>
                      BERMUDA
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters common-select__menu-item custom-content"
                  data-testid="BHUTAN"
                  id="BHUTAN"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div>
                    <div>
                      Bhutan
                    </div>
                    <div>
                      BHUTAN
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="MuiFormHelperText-root test-helpertext common-select__helpertext"
        data-testid="test-select-helper-text"
      >
        some helper text
      </p>
    </div>
  </div>
</div>
`;

exports[`render creatable CommonSelect 1`] = `
<div>
  <div
    class="common-select__root"
    data-testid="common-select"
  >
    <div
      class="MuiFormControl-root"
    >
      <div
        class="MuiInputBase-root MuiInput-root common-select__input-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      >
        <div
          class="common-select__container"
        >
          <div
            class="css-10nd86i MuiInputBase-input MuiInput-input"
            id=""
          >
            <div
              class="css-vj8t7z common-select__control common-select__control--menu-is-open"
            >
              <div
                class="css-1hwfws3 common-select__value-container"
              >
                <div
                  class="css-1g6gooi"
                >
                  <div
                    class="common-select__input"
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="select-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value="test"
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    >
                      test
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-1wy0on6 common-select__indicators"
              >
                <div
                  class="common-select__dropdown-arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 14l5-5 5 5z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="css-15k3avv common-select__menu"
            >
              <div
                class="css-11unzgr common-select__menu-list"
              >
                <li
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
                  data-testid="no-options-message"
                  role="menuitem"
                  tabindex="-1"
                >
                  No results found
                  <span
                    class="MuiTouchRipple-root"
                  />
                </li>
              </div>
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`render read-only CommonSelect with value 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    Algeria
  </span>
</div>
`;

exports[`test disabled CommonSelect 1`] = `
<div>
  <div
    class="common-select__root"
    data-testid="common-select"
  >
    <div
      class="MuiFormControl-root"
    >
      <div
        class="MuiInputBase-root MuiInput-root common-select__input-root MuiInput-underline MuiInputBase-disabled MuiInput-disabled MuiInputBase-formControl MuiInput-formControl"
      >
        <div
          class="common-select__container"
        >
          <div
            class="css-1sontr1 MuiInputBase-input MuiInput-input MuiInputBase-disabled MuiInput-disabled common-select--is-disabled"
            id=""
          >
            <div
              class="css-162g8z5 common-select__control common-select__control--is-disabled"
            >
              <div
                class="css-1hwfws3 common-select__value-container"
              >
                <div
                  class="css-1492t68 common-select__placeholder"
                />
                <div
                  class="css-1g6gooi"
                >
                  <div
                    class="common-select__input"
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      disabled=""
                      id="select-input-disabled"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="css-1wy0on6 common-select__indicators"
              >
                <div
                  class="common-select__dropdown-arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="MuiFormHelperText-root common-select__helpertext"
        data-testid="select-helper-text"
      >
        disabled
      </p>
    </div>
  </div>
</div>
`;
